# StorySandbox-MStorm-2026

./: .gitattributes  .gitignore  README.md  START_MSTORM.bat  START_MSTORM.sh  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.mstorm/: task.md
OA-Codex-brain/: 00_INDEX.md  01_REPO_UNDERSTANDING.md  02_ETHOS_AND_PRODUCT_PRINCIPLES.md  03_ACTIVE_STATE_2026-03-28.md  04_ACTION_PLAN_AND_ROADMAP.md  05_MULTI_ENGINEER_EXECUTION_MODEL.md  06_INTELLIGENT_DEV_METHOD.md  07_TEAM_DISCUSSION_AND_ASSESSMENT.md  08_BRAINSTORM_IDEAS.md
docs/: 01_moviestorm_kb_insights.md  02_technical_roadmap.md  04_ai_upscaling_brainstorm.md  05_asset_ingestion_guide.md  06_technical_knowledge_base.md  README.md  ai_upscaling_brainstorm.md  asset_ingestion_guide.md  development_status.md  handoff_guide.md  setup_guide.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src-tauri/: tauri.conf.json
src/components/: Entity.tsx  ErrorBoundary.tsx  SceneView.tsx  Sidebar.tsx
src/store/: useStore.ts
v2_src/: App.tsx  store.ts
